Changed margins on ipad, now bottom looks better. Changed screenWidth in js to windowWidth (to fix desktop mode on mobile). But the freaking margins in benefits still do not work properly.

--- a/src/less/benefits.less
+++ b/src/less/benefits.less
@@ -6,8 +6,7 @@
     align-self: flex-start;
 
     @media @phone-strict {
-        margin: auto;
-        margin-top: 10%;
+        margin: 10% auto auto auto;
     }
 
     @media @tablet-strict {
@@ -20,10 +19,6 @@
 
     &__samples {
         margin-top: 28px;
-        @media @tablet {
-            //width: 110%;
-            //margin: @pagePaddingRL 0 @pagePaddingRL * 2  0;
-        }
     }
 
     &__gifts {
