--- a/src/less/service-support-about.less
+++ b/src/less/service-support-about.less
@@ -55,7 +55,6 @@
 }
 
 .payment, .why-us {
-
     &__item {
         margin-bottom: 15px;
     }
@@ -83,7 +82,8 @@
     padding-right: @pagePaddingRL;
 
     @media @tablet-strict {
-        margin: auto;
+        //padding: 0;
+        margin-left: auto;
     }
 
     &__title {
