--- a/src/less/social.less
+++ b/src/less/social.less
@@ -3,19 +3,16 @@
 
  .social-media {
      .flexRow;
-     margin: auto;
-     margin-top: 20px;
+     margin: 20px auto auto auto;
 
      @media @tablet-strict {
-         padding-top: 45px;
-         margin: auto;
+         margin: 5% 100px 0 auto;
      }
 
      @media @desktop {
          align-self: flex-start;
          .flexColumn;
-         margin: 0;
-         margin-left: auto;
+         margin: 0 0 0 auto;
      }
 
      &__facebook {
